fix header z-index, wallet icon visible

--- a/src/components/sections/NewHeader/NewHeader.module.css
+++ b/src/components/sections/NewHeader/NewHeader.module.css
@@ -7,7 +7,7 @@
 	background-color: var(--bg-green);
 	position: sticky;
 	top: 0;
-	z-index: 100;
+	z-index: 50;
 
 	.logo {
 		@apply relative;
@@ -96,7 +96,7 @@
 .account {
 	@apply flex items-center;
 
-	min-width: 58px;
+	min-width: 20px;
 	flex-grow: 1;
 	gap: 10px;
 }
